--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
     "@tailwindcss/forms": "^0.5.7",
+    "clsx": "^2.1.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18"
